--- a/package.json
+++ b/package.json
@@ -23,7 +23,18 @@
         "vite": "^7.0.7"
     },
     "dependencies": {
+        "@radix-ui/react-alert-dialog": "^1.1.15",
+        "@radix-ui/react-dropdown-menu": "^2.1.16",
+        "@radix-ui/react-slot": "^1.2.4",
+        "@react-google-maps/api": "^2.20.8",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "lodash": "^4.17.21",
         "lucide-react": "^0.562.0",
-        "swiper": "^12.0.3"
+        "recharts": "^3.6.0",
+        "sweetalert2": "^11.26.17",
+        "swiper": "^12.0.3",
+        "tailwind-merge": "^3.4.0",
+        "tailwindcss-animate": "^1.0.7"
     }
 }
